establish pattern to get all permutations styled

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="container" id="train-ride">
-        <div class="landscape dawn" id="scape">
+        <div class="beyond-train-window mountains dawn" id="scape">
             <div class="layer layer-1"></div>
             <div class="layer layer-2"></div>
             <div class="layer layer-3"></div>
